--- a/main.css
+++ b/main.css
@@ -47,6 +47,15 @@ body {
 }
 
 .footer {
+    display: flex;
+    position: fixed;
+    justify-content: space-evenly;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #293273;
+    color: whitesmoke;
     text-align: center;
-    color: #7078b4;
+    height: 45px;
+    align-items: center;
 }
