--- a/main.css
+++ b/main.css
@@ -7,6 +7,18 @@ body {
     color: #cfe9f6;
 }
 
+
+#main-content {
+    background-image: url('pics/skyline.png');
+    height: 800px;
+}
+
+#lower-content {
+    background-color: #cfe9f6;
+    height: 900px;
+}
+
+
 .nav-bar {
     width: 100%;
     display: flex;
@@ -44,14 +56,6 @@ body {
 
 .nav-links a:hover {
     color: #718daa;
-}
-
-#main-content {
-    background-image: url('pics/skyline.png');
-}
-
-#lower-content {
-    background-color: #cfe9f6;
 }
 
 .footer {
