--- a/main.css
+++ b/main.css
@@ -46,11 +46,14 @@ body {
     color: #718daa;
 }
 
+.footer-holder {
+    position: relative;
+}
+
 .footer {
     display: flex;
-    position: fixed;
+    position: absolute;
     justify-content: space-evenly;
-    left: 0;
     bottom: 0;
     width: 100%;
     background-color: #293273;
@@ -60,10 +63,42 @@ body {
     align-items: center;
 }
 
-.songs-list {
-    display: none; 
-}
+/* .songs-list {
+    display: flex;
+    max-height: 0;
+    flex-direction: column;
+    opacity: 0;
+    transition: max-height, opacity 0.5s ease-out;
+    transition: opacity 0.5s ease-out;
+} */
 
-.band-albums:hover .songs-list {
-    display: inherit;
-}
+/* .band-albums:hover .songs-list {
+    max-height: 500px;
+    opacity: 1;
+    transition: max-height, opacity 1s ease-in;
+    transition: opacity 0.5s ease-out;
+} */
+
+.songs-list { 
+    visibility: hidden; /* hides sub-menu */
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    transform: translateY(-2em);
+    z-index: -1;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  }
+  
+  .disc-text-content:hover .songs-list {
+    visibility: visible; /* shows sub-menu */
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0%);
+    transition-delay: 0s, 0s, 0.3s; /* this removes the transition delay so the menu will be visible while the other styles transition */
+  }
+
+  .disc-text-content {
+      position: relative;
+  }
