--- a/main.css
+++ b/main.css
@@ -129,16 +129,20 @@ body {
     width: 500px;
 }
 
+
+.band-albums .songs-list li {
+    visibility: collapse;
+    height: 0;
+    opacity: 0;
+    /* transition: height 1s, opacity 1s ease-out; */
+}
+
 .band-albums:hover .songs-list li {
     visibility: visible;
     height: 20px;
     opacity: 1;
-    transition: height 1s, opacity 1s ease-in;
-}
-
-.songs-list li {
-    visibility: collapse;
-    height: 0;
-    opacity: 0;
-    transition: height 1s, opacity 1s ease-in;
+    transition: height 1s, opacity 1s ease-out;
+    -webkit-transition: height 1s, opacity 1s ease-out;
+    -moz-transition: height 1s, opacity 1s ease-out;
+    -o-transition: height 1s, opacity 1s ease-out;
 }
