finished styling for right now

--- a/main.css
+++ b/main.css
@@ -117,27 +117,41 @@ body {
 /* TOUR PAGE STYLING START */
 
 .tour-h1 {
-    margin-left: 35px;
+    margin: 15px 0px 20px 35px;
 }
 
 .tour-container {
-    margin-left: 35px;
+    padding: 0px 55px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    
+    justify-content: space-between;   
 }
 
 button {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-radius: 25px;
+    border: solid black 1px;
 }
 
 .tour-container a:hover button {
     background-color: #CFE9F6;
 }
 
+button {
+    padding: 15px 30px;
+    color: black;
+    font-size: 15px;
+    font-style: bold;
+}
+
+.tour-div {
+    flex: 1;
+    border-top: solid white 1px;
+    padding-top: 18px;
+    padding-bottom: 15px;
+  }
+
+  .tour-container div:hover {
+      color: white;
+  }
 
 /* TOUR PAGE STYLING END */
 
