--- a/main.css
+++ b/main.css
@@ -111,3 +111,5 @@ body {
     align-items: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.band > h1 {
