--- a/main.css
+++ b/main.css
@@ -111,3 +111,48 @@ body {
     align-items: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+/* Begin Band-Members */
+.bandmem {
+    /* border: 4px solid cyan; */
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    justify-content: center;
+}
+
+.bandmem:nth-child(even) {
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+ }
+
+.bandmem-bio {
+    padding-left: 20px;
+    padding-right: 20px;
+    max-width: 800px;
+}
+
+.bandmem-bio > h3 {
+    color: #264d76;
+    font-size: 2.5em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.bandmem-bio > h4 {
+    font-size: 1.5em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.bandmem-bio > p {
+    padding-top: 20px;
+}
+
+#band-members {
+    padding: 20px;
+}
+
+.bandmem-img > img {
+    max-height: 300px;
+}
+/* End Band-Members  */
