--- a/main.css
+++ b/main.css
@@ -254,17 +254,17 @@ body {
     
 }
 
-.transition + button {
+.transition + .d-button {
     transform: rotate(-90deg);
 }
 
-.disc-text-content button {
+.disc-text-content .d-button {
     right: 0;
     top: -12px;
     position: absolute;
 }
 
-button {
+.d-button {
     background-image: url(http://www.stickpng.com/assets/thumbs/580b57fcd9996e24bc43c44d.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
