added the roboto and franklin gothic medium font families to the tour page css

--- a/main.css
+++ b/main.css
@@ -170,6 +170,7 @@ body {
 
 .tour-h1 {
     margin: 15px 0px 20px 35px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .tour-container {
@@ -177,10 +178,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;   
-}
-
-.cw-button {
-    border: solid black 1px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .tour-container a:hover .cw-button {
@@ -188,10 +186,12 @@ body {
 }
 
 .cw-button {
+    border: solid black 1px;
     padding: 15px 30px;
     color: black;
     font-size: 15px;
     font-style: bold;
+    font-family: 'Roboto', sans-serif;
 }
 
 .tour-div {
@@ -199,6 +199,7 @@ body {
     border-top: solid white 1px;
     padding-top: 18px;
     padding-bottom: 15px;
+    font-family: 'Roboto', sans-serif;
   }
 
   .tour-container div:hover {
