--- a/main.css
+++ b/main.css
@@ -208,6 +208,21 @@ body {
       color: white;
   }
 
+  .tour-header-container {
+    padding: 0px 55px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: bold;
+  }
+  
+  .tour-header {
+    flex: 1;
+    padding-bottom: 20px;
+    font-size: 1.3em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+
 /* TOUR PAGE STYLING END */
 
 /* Discography styling */
