finished the styling on the tour header

--- a/main.css
+++ b/main.css
@@ -221,6 +221,7 @@ body {
     padding-bottom: 20px;
     font-size: 1.3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
   }
 
 /* TOUR PAGE STYLING END */
