--- a/main.css
+++ b/main.css
@@ -116,7 +116,7 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-/* Begin Band-Members */
+/* BEGIN BAND MEMBERS */
 .bandmem {
     /* border: 4px solid cyan; */
     display: flex;
@@ -163,8 +163,11 @@ body {
 
 .bandmem-page {
     margin: 15px 0px 20px 35px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    font-weight: bolder;
 }
-/* End Band-Members  */
+/* END BAND MEMBERS  */
 
 /* TOUR PAGE STYLING START */
 
@@ -267,10 +270,6 @@ body {
 
 .transition li:first-of-type {
     margin-top: 15px;
-}
-
-.transition {
-    
 }
 
 .transition + .d-button {
