--- a/main.css
+++ b/main.css
@@ -45,7 +45,8 @@ body {
 }
 
 .band-photo {
-    width: 600px;
+    max-width: 600px;
+    min-width: 600px;
     padding-top: 40px;
     padding-bottom: 30px;
     height: 500px;
@@ -243,7 +244,6 @@ body {
     position: relative;
 }
 
-
 .songs-list {
     position: relative;
     visibility: collapse;
@@ -252,7 +252,6 @@ body {
     opacity: 0;
     transition: height 1s, opacity 1s ease-out;
 }
-
 
 .transition{
     visibility: visible;
